--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.navBar{
+  display: flex;
+  flex-direction: row;
+  background-color: chartreuse;
+  width: 100vw;
+  height: 10vh;
+}
