--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 }
 
 .navBar{
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
   background-color: chartreuse;
   width: 100vw;
