got rid of the text align center in the boilerplate app divs css properties, it was pushing everything into the middle, anyway.... moving on

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+#{
+  margin: none;
+}
+
 .App {
-  text-align: center;
 }
 
 .App-logo {
@@ -44,4 +47,9 @@
   width: 100vw;
   height: 10vh;
   position: fixed;
+}
+
+.navOptions{
+  display: inline-flex;
+  flex-direction: row;
 }
