added some spacing between nav items

--- a/src/App.css
+++ b/src/App.css
@@ -62,25 +62,28 @@
 }
 
 .home{
-
 }
 
 .portfolio{
-
+  margin-left: 3vw;
 }
 
 .lamb{
+  margin-left: 3vw;
 
 }
 
 .causes{
+  margin-left: 3vw;
 
 }
 
 .about{
+  margin-left: 3vw;
 
 }
 
 .journal{
-  
+  margin-left: 3vw;
+
 }
