added the font to the nav items in the css rules

--- a/src/App.css
+++ b/src/App.css
@@ -67,29 +67,35 @@
 
 .home{
   color: white;
+  font-family: 'Indie Flower', cursive;
 }
 
 .portfolio{
   margin-left: 3vw;
   color: white;
+  font-family: 'Indie Flower', cursive;
 }
 
 .lamb{
   margin-left: 3vw;
   color: white;
+  font-family: 'Indie Flower', cursive;
 }
 
 .causes{
   margin-left: 3vw;
   color: white;
+  font-family: 'Indie Flower', cursive;
 }
 
 .about{
   margin-left: 3vw;
   color: white;
+  font-family: 'Indie Flower', cursive;
 }
 
 .journal{
   margin-left: 3vw;
   color: white;
+  font-family: 'Indie Flower', cursive;
 }
