--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@
   width: 100vw;
   height: 10vh;
   position: fixed;
+  z-index: 10;
 }
 
 .logo{
@@ -68,6 +69,7 @@
   color: white;
   font-family: 'Indie Flower', cursive;
   font-size: 28px;
+  font-weight: bolder;
 }
 
 .portfolio{
@@ -75,6 +77,8 @@
   color: white;
   font-family: 'Indie Flower', cursive;
   font-size: 28px;
+  font-weight: bolder;
+
 }
 
 .lamb{
@@ -82,6 +86,8 @@
   color: white;
   font-family: 'Indie Flower', cursive;
   font-size: 28px;
+  font-weight: bolder;
+
 }
 
 .causes{
@@ -89,6 +95,8 @@
   color: white;
   font-family: 'Indie Flower', cursive;
   font-size: 28px;
+  font-weight: bolder;
+
 }
 
 .about{
@@ -96,6 +104,8 @@
   color: white;
   font-family: 'Indie Flower', cursive;
   font-size: 28px;
+  font-weight: bolder;
+
 }
 
 .journal{
@@ -103,4 +113,6 @@
   color: white;
   font-family: 'Indie Flower', cursive;
   font-size: 28px;
+  font-weight: bolder;
+
 }
