--- a/src/App.css
+++ b/src/App.css
@@ -54,11 +54,13 @@
 .decorativeDiv{
   background-color: navy;
   position: absolute;
-  margin-left: 50vw;
+  display: inline-flex;
+  flex-direction: row;
+  margin-left: 60vw;
   width: 70vw;
   height: 100vh;
   z-index: 10;
-  transform: skewX(30deg);
+  transform: skewX(40deg);
 }
 
 .logo{
@@ -66,6 +68,7 @@
   margin-top: 2vh;
   background-image: url("./charleslamb3264.png");
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: 100%;
   height: 62px;
   width: 260px;
