--- a/src/App.css
+++ b/src/App.css
@@ -151,8 +151,13 @@
 }
 
 .socialMediaButtons{
-background-color: black;
+background-color: grey;
+margin-top: 1rem;
+border-top-left-radius: 50%;
+border-top-right-radius: 50%;
+border-bottom-left-radius: 50%;
+border-bottom-right-radius: 50%;
 width: 2.5vw;
-height: 15vh;
+height: 40vh;
 left: 1px;
 }
