--- a/src/App.css
+++ b/src/App.css
@@ -161,3 +161,28 @@ width: 2.5vw;
 height: 40vh;
 left: 1px;
 }
+
+.greeting{
+  height: 8vh;
+  width: 20vw;
+  border: 2px black solid;
+  margin-top: 2rem;
+  margin-left: 8vw;
+  font-family: 'Indie Flower', cursive;
+  font-size: 40px;
+  font-weight: bolder;
+  color: navy;
+  letter-spacing: 0.5rem;
+  position: absolute;
+}
+
+.name{
+  height: 8vh;
+  width: 20vw;
+  border: 2px black solid;
+  margin-top: 6rem;
+  margin-left: 7vw;
+  font-family: 'Indie Flower', cursive;
+  font-size: 40px;
+  font-weight: bolder;
+}
