added the pic to the very bottom of the fold so that it is flush, and removed the borders I was using as markers

--- a/src/App.css
+++ b/src/App.css
@@ -191,9 +191,9 @@ left: 1px;
   display: inline-flex;
   flex-direction: row;
   background-image: url('./_DPL1167-removebg-preview.png');
-  margin-top: 100px;
+  background-repeat: no-repeat;
+  margin-top: 126px;
   margin-left: 20vw;
-  border: 2px solid;
   width: 30vw;
   height: 80vh;
   z-index: 11;
