added the top slogan area with the correct text, and made it absolute just like the other sections, however I still have to change the fonts

--- a/src/App.css
+++ b/src/App.css
@@ -187,6 +187,16 @@ left: 1px;
   font-weight: bolder;
 }
 
+.topSlogan{
+  height: 5vh;
+  width: 30vw;
+  border: 2px black solid;
+  margin-top: 10rem;
+  margin-left: 7vw;
+  position: absolute;
+
+}
+
 .rightFoldSection{
   display: inline-flex;
   flex-direction: row;
