added a little bit of style to the portfolio button but no bells and whistles yet

--- a/src/App.css
+++ b/src/App.css
@@ -218,6 +218,11 @@ left: 1px;
   flex-direction: row;
 }
 
+.portfolioButton{
+  background-color: navy;
+  color: orange;
+}
+
 .rightFoldSection{
   display: inline-flex;
   flex-direction: row;
