--- a/src/App.css
+++ b/src/App.css
@@ -154,12 +154,13 @@
 }
 
 .socialMediaButtons{
-background-color: grey;
+background-color: white;
 margin-top: 1rem;
-border-top-left-radius: 50%;
-border-top-right-radius: 50%;
-border-bottom-left-radius: 50%;
-border-bottom-right-radius: 50%;
+border: 2px black solid;
+border-top-left-radius: 60%;
+border-top-right-radius: 60%;
+border-bottom-left-radius: 60%;
+border-bottom-right-radius: 60%;
 width: 2.5vw;
 height: 40vh;
 left: 1px;
@@ -215,9 +216,8 @@ left: 1px;
 
 .portfolioButton{
   background-color: navy;
-  color: orange;
-  font-family: 'Indie Flower', cursive;
-  font-size: 1.2rem;
+  color: white;
+  font-size: 1.1rem;
   font-weight: bolder;
   border-radius: 5px;
   width: 120px;
@@ -227,11 +227,10 @@ left: 1px;
 
 .contactButton{
   background-color: orange;
-  font-family: 'Indie Flower', cursive;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: bolder;
-  color: navy;
-  margin-left: 6vw;
+  color: white;
+  margin-left: 3vw;
   border-radius: 5px;
   width: 120px;
   height: 50px;
