aligned the right side div sections a little bit better and played with the skew of the image a bit more but it still sucks and needs more work

--- a/src/App.css
+++ b/src/App.css
@@ -182,7 +182,7 @@ left: 1px;
   height: 8vh;
   width: 20vw;
   margin-top: 6rem;
-  margin-left: 7.2vw;
+  margin-left: 7vw;
   font-family: 'Indie Flower', cursive;
   font-size: 40px;
   font-weight: bolder;
@@ -192,7 +192,7 @@ left: 1px;
   height: 5vh;
   width: 30vw;
   margin-top: 10rem;
-  margin-left: 10vw;
+  margin-left: 9.9vw;
   position: absolute;
 }
 
@@ -200,7 +200,7 @@ left: 1px;
   height: 5vh;
   width: 30vw;
   margin-top: 13rem;
-  margin-left: 10vw;
+  margin-left: 9.9vw;
   position: absolute;
 }
 
@@ -252,10 +252,11 @@ left: 1px;
   background-color: orange;
   display: inline-flex;
   flex-direction: row;
-  margin-top: 126px;
-  margin-left: 20vw;
-  width: 30vw;
-  height: 80vh;
+  margin-top: 190px;
+  margin-left: 4vw;
+  width: 60vw;
+  height: 50vh;
   z-index: 10;
   position: absolute;
+  transform: skew(25deg, 10deg);
 }
