--- a/src/App.css
+++ b/src/App.css
@@ -220,6 +220,7 @@
   margin-left: 30px;
   width: 40vw;
   height: 50vh;
+  overflow: visible;
 }
 
 .socialMediaButtons{
@@ -229,6 +230,7 @@
   border-radius: 100px / 50px;
   left: 1px;
   position: absolute;
+  overflow: visible;
 }
 
 .greeting{
@@ -247,7 +249,7 @@
   height: 8vh;
   width: 20vw;
   margin-top: 6rem;
-  margin-left: 7vw;
+  margin-left: 9.6vw;
   font-family: 'Indie Flower', cursive;
   font-size: 40px;
   font-weight: bolder;
