--- a/src/App.css
+++ b/src/App.css
@@ -341,88 +341,46 @@
   transform: skew(25deg, 10deg);
 }
 
-a {
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
   text-decoration: none;
-  color: #fff;
-}
-p > a:hover{
-  color: #d9d9d9;
-  text-decoration:  underline;
+  border-radius: 50%;
 }
 
-._14 {
-  font-size: 1.4em;
+.fa:hover {
+  opacity: 0.7;
 }
 
-.footer-social-icons {
-  height: 350px;
-  display:block;
-  margin-right: 2px;
-  position: absolute;
-
-}
-.social-icon {
-  color: #fff;
-}
-ul.social-icons {
-  margin-top: 10px;
-}
-.social-icons li {
-  vertical-align: top;
-  display: inline;
-  height: 100px;
-}
-.social-icons a {
-  color: #fff;
-  text-decoration: none;
+.fa-facebook {
+background: #3B5998;
+color: white;
 }
 
 .fa-twitter {
-  padding:10px 12px;
-  -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  transition: .5s;
-  background-color: #322f30;
+background: #55ACEE;
+color: white;
 }
-.fa-twitter:hover {
-  background-color: #00aced;
+
+.fa-google {
+background: #dd4b39;
+color: white;
+}
+
+.fa-linkedin {
+background: navy;
+color: white;
 }
 
 .fa-youtube {
-  padding:10px 14px;
-  -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  transition: .5s;
-  background-color: #322f30;
+background: orange;
+color: white;
 }
-.fa-youtube:hover {
-  background-color: #e64a41;
-}
-.fa-linkedin {
-  padding:10px 14px;
-  -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  transition: .5s;
-  background-color: #322f30;
-}
-.fa-linkedin:hover {
-  background-color: #0073a4;
-}
-.fa-github {
-  padding:10px 14px;
-  -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  transition: .5s;
-  background-color: #322f30;
-}
-.fa-github:hover {
-  background-color: #5a32a3;
+
+.fa-instagram {
+background: orange;
+color: white;
 }
