changed spacing on the right border of each nav option

--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,8 @@
   display: inline-flex;
   flex-direction: row;
   margin-left: 7vw;
-  margin-top: 3vh;
+  margin-top: 1.7vh;
+  padding-top: 1.4vh;
 }
 
 .home{
