changed contact button to resume button

--- a/src/App.css
+++ b/src/App.css
@@ -320,7 +320,7 @@
   border: solid navy;
 }
 
-.contactButton{
+.resumeButton{
   background-color: rgb(250, 178, 43);
   color: white;
   font-weight: bolder;
