--- a/src/App.css
+++ b/src/App.css
@@ -446,3 +446,13 @@ position: absolute;
   overflow: visible;
 }
 
+#ResumeCloseButton{
+  background-color: rgb(0, 34, 102);
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  width: 120px;
+  height: 50px;
+  border: solid rgb(0, 26, 77);
+}
+
