postitoned close button in middle of resume

--- a/src/App.css
+++ b/src/App.css
@@ -454,5 +454,7 @@ position: absolute;
   width: 120px;
   height: 50px;
   border: solid rgb(0, 26, 77);
+  margin-top: 40vh;
+  margin-left: 19vw;
 }
 
