changed color of navbar onSroll but I have the entire app on 100 viewport width and height so I will now have to change that to test it

--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,7 @@
   position: fixed;
   z-index: 10;
   box-shadow: 0px -8px 40px lightgrey;
+  background-color: transparent;
 }
 
 .decorativeDiv{
