--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 .App {
   height: 100vh;
   width: 100vw;
-  overflow-x: scroll;
+  overflow-y: scroll;
 }
 
 .App-logo {
@@ -448,14 +448,15 @@ position: absolute;
 }
 
 #ResumeCloseButton{
-  background-color: rgb(0, 34, 102);
+  background-color: rgb(249, 140, 31);
   color: white;
   font-weight: bold;
   border-radius: 5px;
   width: 120px;
   height: 50px;
   border: solid rgb(0, 26, 77);
-  margin-top: 40vh;
+  margin-top: 91vh;
   margin-left: 19vw;
 }
+
 
