used the mail to method to make my email icon send users to their emails with my address in the to column on click. but guess what? It flew everythind away and broke the page lucky me...

--- a/src/App.css
+++ b/src/App.css
@@ -408,6 +408,7 @@ position: absolute;
   margin-left: 35px;
   margin-top: 32px;
   position: absolute;
+  overflow: hidden;
 }
 
 .emailInfo{
@@ -416,7 +417,7 @@ position: absolute;
   margin-top: 21px; 
   width: 2vw;
   height: 5vh;
-  position: absolute;
+  position: fixed;
   overflow: hidden;
   background-size: contain;
   background-repeat: no-repeat;
