wheew! what a hot mess is all I can say. Having serious issues with react router, but I shall overcome. created all the paths but I need to review dobumentation for a refresher because I beilieve I am doing it wrong. However I have not even created all the components I am trying to link to yet so that may be the only issue. Here's me crossing my fingers

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@
   flex-direction: row;
   width: 100vw;
   height: 10vh;
-  position: fixed;
+  position: absolute;
   z-index: 10;
   box-shadow: 0px -8px 40px lightgrey;
   background-color: transparent;
