--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Train+One&display=swap');
+
 .projectsBackground{
     background-color: rgb(0, 34, 102);
     height: 100vh;
     width: 100vw;
+}
+
+.projectsTitle{
+    color: rgb(249, 140, 31);
+    font-family: 'Train One', cursive;
+    margin-left: 45vw;
+    margin-top: 15vh;
+
 }
