--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Train+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 .projectsBackground{
     background-color: rgb(0, 34, 102);
@@ -9,11 +11,8 @@
 .projectsTitle{
     color: rgb(249, 140, 31);
     width: 13vw;
-    padding-bottom: 2px;
-    font-family: 'Train One', cursive;
-    margin-left: 42vw;
+    font-family: 'Permanent Marker', cursive;    margin-left: 42vw;
     margin-top: 10vh;
     font-size: 40px;
     font-weight: bold;
-    border-bottom: rgb(249, 140, 31) solid 2px;
 }
