--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -3,9 +3,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 .projectsBackground{
+    position: absolute;
     background-color: rgb(0, 34, 102);
-    height: 100vh;
-    width: 100vw;
+    height: 10.5vh;
+    width: 60vw;
+    margin-left: 40vw;
+    border-left-style: dashed;
+    border-bottom-left-radius: 30%70px;
+    border-top-left-radius: 85%65px;
 }
 
 .projectsTitle{
@@ -20,9 +25,17 @@
 }
 
 .projectsInfoDiv{
-    margin-left: 35vw;
+    margin-left: 32vw;
     margin-top: 18vh;
     width: 40vw;
     height: 7vh;
-    border: solid orange 2px;
+    color: black;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 25px;
+}
+
+#cardsDiv{
+    border: solid black 2px;
+    height: 70vh;
+    width: 80vw;
 }
