--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -2,15 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
-.projectsBackground{
+.projectsNavDecoratio{
     position: absolute;
     background-color: rgb(0, 34, 102);
     height: 10.5vh;
     width: 60vw;
     margin-left: 40vw;
     border-left-style: dashed;
-    border-bottom-left-radius: 30%70px;
-    border-top-left-radius: 85%65px;
+    border-bottom-left-radius: 35%95px;
+    border-top-left-radius: 90%75px;
 }
 
 .projectsTitle{
@@ -38,4 +38,11 @@
     border: solid black 2px;
     height: 70vh;
     width: 80vw;
+}
+
+#projectsBackground{
+    z-index: -1;
+    background-color: rgb(233, 231, 231);
+    width: 100%;
+    height: 100%;
 }
