changed projects to a class component and added the cards component four times which will represent the projects

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -36,8 +36,11 @@
 
 #cardsDiv{
     border: solid black 2px;
+    position: absolute;
     height: 70vh;
     width: 80vw;
+    display: inline-flex;
+    flex-direction: row;
 }
 
 #projectsBackground{
