--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -49,3 +49,12 @@
     width: 100%;
     height: 100%;
 }
+
+#infoAboutProjectsSection{
+    background-color: indianred;
+    width: 40vw;
+    height: 40vh;
+    overflow-y: scroll;
+    position: relative;
+    margin-top: 40vh;
+}
