--- a/src/components/About.css
+++ b/src/components/About.css
@@ -18,6 +18,14 @@
     margin-top: 0;
     margin-bottom: 10;
     top: 0;
-    height: 30vh;
+    height: 12vh;
     overflow: visible;
+}
+#aboutSkewedDov{
+    background-color: green;
+    width: 100vw;
+    height: 5vw;
+    margin-top: 0;
+    overflow: visible;
+    position: absolute;
 }
